# Stable-Diffusion

./: .gitignore  README.md  pyproject.toml
src/attention/: cross_attention.py  self_attention.py
src/clip/: clip.py
src/diffusion/: blocks.py  diffusion.py  switch_sequential.py  unet.py  utils.py
src/vae/: attention.py  decoder.py  encoder.py  residual.py  vae_attention.py
