[project]
name = "stable-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
